--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -6,10 +6,10 @@
         {% block stylesheets %}{% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
         <!-- Latest compiled and minified CSS -->
-        <link rel="stylesheet" href="front/dist/css/bootstrap.css">
+        <link rel="stylesheet" href="{{ asset('front/dist/css/bootstrap.css') }}">
 
         <!-- Optional theme -->
-        <link rel="stylesheet" href="front/dist/css/bootstrap-theme.css">
+        <link rel="stylesheet" href="{{ asset('front/dist/css/bootstrap-theme.css') }}">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
     </head>
@@ -26,6 +26,6 @@
         </div>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <!-- Latest compiled and minified JavaScript -->
-        <script src="front/dist/js/bootstrap.js"></script>
+        <script src="{{ asset('front/dist/js/bootstrap.js') }}"></script>
     </body>
 </html>
