--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -2,6 +2,7 @@
 
 {% block body %}
 <div class="row welcome-panel">
+{# <img src="{{ asset('image/londres.jpeg') }}"> #}
     <div class="col-md-6 col-md-offset-3">
         <h1>Pratiquez comme si vous y étiez</h1>
         {% if app.security.token is not null and is_granted("IS_AUTHENTICATED_REMEMBERED") %}
