Navbar + profile page + discussion pages

--- a/web/front/less/eduspeak/eduspeak.less
+++ b/web/front/less/eduspeak/eduspeak.less
@@ -25,3 +25,12 @@
 .edu-justify{
     text-align: justify;
 }
+
+.home-link{
+    text-decoration: none;
+    color: #ff5050;
+    &:hover{
+        text-decoration: none;
+        color: #ff5050;
+    }
+}
