First chat display with websocket

--- a/app/Resources/FOSUserBundle/views/Profile/show_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Profile/show_content.html.twig
@@ -21,7 +21,7 @@
                     <h3 class="panel-title">Active Discussions</h3>
                 </div>
                 <div class="panel-body">
-
+                    <a href="{{ path('chat_list') }}">See all discussions</a>
                 </div>
             </div>
         </div>
