--- a/web/front/less/eduspeak/discussion.less
+++ b/web/front/less/eduspeak/discussion.less
@@ -1,10 +1,18 @@
 .participants{
     li{
-      list-style: none;
+        list-style: none;
     }
 }
 
 
 .panel-chat{
-  min-height: 80vh;
+    min-height: 80vh;
+}
+
+
+#chat_room{
+    li{
+        text-decoration: none;
+        list-style: none;
+    }
 }
