--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -17,11 +17,11 @@
   <!-- Wrapper for slides -->
   <div class="carousel-inner" role="listbox">
     <div class="item active">
-      <img src="{{ asset('image/londres.jpeg') }}" alt="Londres">
+      <img class="img-responsive center-block" src="{{ asset('image/londres.jpeg') }}" alt="Londres" width="1050" height="600">
     </div>
 
     <div class="item">
-      <img src="{{ asset('image/paris.jpg') }}" alt="Paris">
+      <img class="img-responsive center-block" src="{{ asset('image/paris.jpg') }}" alt="Paris" width="1050" height="600">
     </div>
 
     <div class="item">
@@ -33,15 +33,6 @@
     </div>
   </div>
 
-  <!-- Left and right controls -->
-  <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
 </div>
 {# Fin Slideshow #}
 
