--- a/app/Resources/FOSUserBundle/views/layout.html.twig
+++ b/app/Resources/FOSUserBundle/views/layout.html.twig
@@ -14,7 +14,10 @@
 
     {% for type, messages in app.session.flashBag.all %}
         {% for message in messages %}
-            <div class="{{ type }}">
+            <div class="alert alert-{{ type }} alert-dismissible" role="alert">
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
                 {{ message|trans({}, 'FOSUserBundle') }}
             </div>
         {% endfor %}
