--- a/web/front/less/bootstrap.less
+++ b/web/front/less/bootstrap.less
@@ -59,3 +59,4 @@
 @import "eduspeak/eduspeak.less";
 @import "eduspeak/button.less";
 @import "eduspeak/discussion.less";
+@import "eduspeak/profile.less";
