Remise à niveau du slideshow

--- a/web/front/less/carousel.less
+++ b/web/front/less/carousel.less
@@ -216,12 +216,9 @@
 // Hidden by default for smaller viewports
 .carousel-caption {
   position: absolute;
-  left: 15%;
-  right: 15%;
-  bottom: 20px;
+  width: inherit;
+  height: inherit;
   z-index: 10;
-  padding-top: 20px;
-  padding-bottom: 20px;
   color: @carousel-caption-color;
   text-align: center;
   text-shadow: @carousel-text-shadow;
