--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -12,6 +12,11 @@
         <link rel="stylesheet" href="{{ asset('front/dist/css/bootstrap-theme.css') }}">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
+
+        <!-- icone social media -->
+        <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+
+
     </head>
     <body>
         <div class="container">
@@ -62,4 +67,54 @@
         <!-- Latest compiled and minified JavaScript -->
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
     </body>
+    <footer>
+
+                <div class="row row-condensed">
+
+
+                    <div class="col-sm-12 space-4 space-top-4">
+                        <ul class="list-layout list-inline text-center h5">
+                            <li><a href="/about/about-us" class="link-contrast">À propos</a></li>
+                            <li><a href="http://blog.airbnb.com" class="link-contrast">Blog</a></li>
+                            <li><a href="/terms" class="link-contrast">Conditions générales et confidentialité</a></li>
+                        </ul>
+                    </div>
+
+                    <hr class="footer-divider space-top-8 space-4 hide-sm">
+
+                    <div class="text-center">
+                        <h2 class="h5 space-4 hide-sm">Rejoignez-nous sur</h2>
+                        <ul class="list-layout list-inline" itemscope="" itemtype="http://schema.org/Organization">
+                            <link itemprop="url" href="https://www.speakit.fr">
+                            <meta itemprop="logo" content="https://a2.muscache.com/airbnb/static/logos/belo-200x200-4d851c5b28f61931bf1df28dd15e60ef.png">
+                            <li>
+                                <a href="https://www.facebook.com/speakit" class="link-contrast footer-icon-container" itemprop="sameAs" target="_blank">
+                                    <!--<span class="screen-reader-only">Facebook</span>-->
+                                    <i class="fa fa-lg fa-facebook"></i>
+                                </a>        </li>
+
+                            <li>
+                                <a href="https://twitter.com/speakit" class="link-contrast footer-icon-container" itemprop="sameAs" target="_blank">
+                                   <!-- <span class="screen-reader-only">Twitter</span>-->
+                                    <i class="fa fa-lg fa-twitter"></i>
+                                </a>        </li>
+
+                            <li>
+                                <a href="https://www.linkedin.com/company/speakit" class="link-contrast footer-icon-container" itemprop="sameAs" target="_blank">
+                                    <!--<span class="screen-reader-only">LinkedIn</span>-->
+                                    <i class="fa fa-lg fa-linkedin"></i>
+                                </a>      </li>
+
+                            <li>
+                                <a href="https://instagram.com/speakit" class="link-contrast footer-icon-container" itemprop="sameAs" target="_blank">
+                                   <!-- <span class="screen-reader-only">Instagram</span>-->
+                                    <i class="fa fa-lg fa-instagram"></i>
+                                </a>        </li>
+                        </ul>
+                        <div class="space-top-2 text-muted">
+                            © Speakit, Inc.
+                        </div>
+
+        </div>
+    </footer>
 </html>
