--- a/web/front/less/dropdowns.less
+++ b/web/front/less/dropdowns.less
@@ -64,12 +64,13 @@
   // Links within the dropdown menu
   > li > a {
     display: block;
-    padding: 3px 20px;
+    padding: 20px 150px 20px 20px;
     clear: both;
     font-weight: normal;
     line-height: @line-height-base;
     color: @dropdown-link-color;
     white-space: nowrap; // prevent links from randomly breaking onto new lines
+    border-bottom: grey solid 1px;
   }
 }
 
@@ -80,6 +81,7 @@
     text-decoration: none;
     color: @dropdown-link-hover-color;
     background-color: @dropdown-link-hover-bg;
+    margin-left: 20px;
   }
 }
 
