--- a/web/front/less/utilities.less
+++ b/web/front/less/utilities.less
@@ -53,3 +53,15 @@
 .affix {
   position: fixed;
 }
+
+// Margin content
+// -------------------------
+
+.no-padding-vertical {
+  padding-top: 0 !important;
+  padding-bottom: 0 !important;
+}
+
+// Padding content
+// -------------------------
+
