--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8" />
-        <title>{% block title %}Welcome!{% endblock %}</title>
+        <title>{% block title %}SpeakIt!{% endblock %}</title>
         {% block stylesheets %}{% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
         <!-- Latest compiled and minified CSS -->
@@ -11,7 +11,6 @@
         <!-- Optional theme -->
         <link rel="stylesheet" href="{{ asset('front/dist/css/bootstrap-theme.css') }}">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-
     </head>
     <body>
         <div class="container">
@@ -27,20 +26,28 @@
                                     <span class="icon-bar"></span>
                                     <span class="icon-bar"></span>
                                 </button>
-                                <a class="navbar-brand" href="/">Speak It</a>
+                                <img class="eduspeak-logo" src="{{ asset('image/speakit.png') }}" alt="SpeakIt!" />
+                                <a class="navbar-brand" href="/">SpeakIt!</a>
                             </div>
                             <!-- Collect the nav links, forms, and other content for toggling -->
                             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                                 <ul class="nav navbar-nav navbar-right">
+                                    <li><a href="#">Choisir une destination</a></li>
+                                    <li><a href="{{ path('chat_list') }}">Mes lettres</a></li>
+                                    <li><a href="#">Mes compagnons</a></li>
                                     <li class="dropdown">
-                                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{ app.user.username }}<span class="caret"></span></a>
+                                        <a href="#" class="dropdown-toggle no-padding-vertical" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                                            <img class="profile-picture" src="{{ asset('image/kevin_lebre.jpg') }}" alt="Profil" />
+                                            {{ app.user.username }}<span class="caret"></span>
+                                        </a>
                                         <ul class="dropdown-menu">
-                                            <li><a href="{{ path('fos_user_profile_show') }}">My Profile</a></li>
-                                            <li><a href="{{ path('chat_list') }}">Discussions</a></li>
-                                            <li><a href="#">Contacts</a></li>
+                                            <li><a href="{{ path('fos_user_profile_show') }}">Mon passeport</a></li>
+                                            <li><a href="#">Paramètres</a></li>
+                                            <li><a href="#">F.A.Q</a></li>
+                                            <li><a href="#">Contactez-nous</a></li>
+                                            <li><a href="{{ path('fos_user_security_logout') }}">{{ 'layout.logout'|trans({}, 'FOSUserBundle') }}</a></li>
                                         </ul>
                                     </li>
-                                    <li><a href="{{ path('fos_user_security_logout') }}">{{ 'layout.logout'|trans({}, 'FOSUserBundle') }}</a></li>
                                 </ul>
                             </div><!-- /.navbar-collapse -->
                         </div><!-- /.container-fluid -->
@@ -50,7 +57,7 @@
                 <div class="row edu-nav">
                     <div class="col-md-12">
                         <img class="eduspeak-logo" src="" />
-                        <h1><a class="home-link" href="/">Speak It</a></h1>
+                        <h1><a class="home-link" href="/">SpeakIt!</a></h1>
                     </div>
                 </div>
             {% endif %}
