--- a/web/front/less/eduspeak/eduspeak.less
+++ b/web/front/less/eduspeak/eduspeak.less
@@ -1,6 +1,14 @@
 //MAIN CLASSEs
 
-.welcome-panel{
+.eduspeak-logo {
+    float:left;
+}
+
+.profile-picture {
+
+}
+
+.welcome-panel {
     min-height: 25rem;
     background-color: @eduspeak-base;
     color: white;
@@ -8,7 +16,7 @@
     padding-top: 5rem;
 }
 
-.home-row{
+.home-row {
     border-bottom: solid 3px;
     text-align: center;
     color: @gray-light;
@@ -17,16 +25,15 @@
     }
 }
 
-.edu-nav{
+.edu-nav {
     color: @eduspeak-base;
-    
 }
 
-.edu-justify{
+.edu-justify {
     text-align: justify;
 }
 
-.home-link{
+.home-link {
     text-decoration: none;
     color: #ff5050;
     &:hover{
