--- a/web/front/less/scaffolding.less
+++ b/web/front/less/scaffolding.less
@@ -30,6 +30,7 @@ body {
   line-height: @line-height-base;
   color: @text-color;
   background-color: @body-bg;
+  width:@full-width;
 }
 
 // Reset fonts for relevant elements
