--- a/app/Resources/FOSUserBundle/views/Profile/show_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Profile/show_content.html.twig
@@ -2,7 +2,8 @@
 
 <div class="fos_user_user_show edu-profile">
     <div class="page-header">
-        <h1>Welcome {{ user.username }}</h1>
+        <img src="{{ user.facebookPicture }}" />
+        <h1 class="user-name">{{ user.username }}</h1>
     </div>
     <div class="row">
         <div class="col-md-6 col-md-offset-3">
