--- a/web/front/less/eduspeak/profile.less
+++ b/web/front/less/eduspeak/profile.less
@@ -3,3 +3,15 @@
 		list-style: none;
 	}
 }
+
+
+.page-header{
+	.user-name{
+		line-height: 1.5em;
+	    margin-left: 2em;
+	}
+	img{
+		border-radius: 100%;
+		float: left;
+	}
+}
