--- a/web/front/less/eduspeak/eduspeak.less
+++ b/web/front/less/eduspeak/eduspeak.less
@@ -4,8 +4,13 @@
     float:left;
 }
 
-.profile-picture {
+.edu-nav {
+    color: @eduspeak-base;
+}
 
+.profile-picture {
+    border-radius: 30px;
+    margin-right: 10px;
 }
 
 .welcome-panel {
@@ -23,10 +28,6 @@
     >div{
         margin-top: 4rem;
     }
-}
-
-.edu-nav {
-    color: @eduspeak-base;
 }
 
 .edu-justify {
