--- a/web/front/less/variables.less
+++ b/web/front/less/variables.less
@@ -23,6 +23,8 @@
 @brand-warning:         #f0ad4e;
 @brand-danger:          #d9534f;
 
+@gray-border:           #dce0e0 solid 1px;
+
 
 //== Scaffolding
 //
