--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -41,11 +41,11 @@
                                             {{ app.user.username }}<span class="caret"></span>
                                         </a>
                                         <ul class="dropdown-menu">
-                                            <li><a href="{{ path('fos_user_profile_show') }}">Mon passeport</a></li>
-                                            <li><a href="#">Paramètres</a></li>
-                                            <li><a href="#">F.A.Q</a></li>
-                                            <li><a href="#">Contactez-nous</a></li>
-                                            <li><a href="{{ path('fos_user_security_logout') }}">{{ 'layout.logout'|trans({}, 'FOSUserBundle') }}</a></li>
+                                            <li><a href="{{ path('fos_user_profile_show') }}"><div class="hover-item__content">Mon passeport</div></a></li>
+                                            <li><a href="#"><div class="hover-item__content">Paramètres</div></a></li>
+                                            <li><a href="#"><div class="hover-item__content">F.A.Q</div></a></li>
+                                            <li><a href="#"><div class="hover-item__content">Contactez-nous</div></a></li>
+                                            <li><a href="{{ path('fos_user_security_logout') }}"><div class="hover-item__content">{{ 'layout.logout'|trans({}, 'FOSUserBundle') }}</div></a></li>
                                         </ul>
                                     </li>
                                 </ul>
@@ -54,11 +54,13 @@
                     </nav>
                 </div>
             {% else %}
-                <div class="row edu-nav">
-                    <div class="col-md-12">
-                        <img class="eduspeak-logo" src="" />
-                        <h1><a class="home-link" href="/">SpeakIt!</a></h1>
-                    </div>
+                <div class="row">
+                    <div class="navbar navbar-default">
+                        <div class="container-fluid">
+                            <img class="eduspeak-logo" src="{{ asset('image/speakit.png') }}" alt="SpeakIt!" />
+                            <a class="navbar-brand" href="/">SpeakIt!</a>
+                        </div><!-- /.container-fluid -->
+                    </div><!-- /.navbar-collapse -->
                 </div>
             {% endif %}
 
