Amélioration du slideshow (fullscreen, link, position)

--- a/web/front/less/eduspeak/eduspeak.less
+++ b/web/front/less/eduspeak/eduspeak.less
@@ -29,6 +29,15 @@
     color: @eduspeak-base;
 }
 
+//NAVBAR POUR QUE CELA RECOUVRE L'IMAGE PRINCIPALE
+.edu-nav .overheader{
+    z-index: 10;
+    /* background: #fff; */
+    width: 100%;
+    position: absolute;
+    /* opacity: 0.5;*/
+}
+
 .edu-justify {
     text-align: justify;
 }
