--- a/web/front/less/carousel.less
+++ b/web/front/less/carousel.less
@@ -23,6 +23,8 @@
     > a > img {
       &:extend(.img-responsive);
       line-height: 1;
+      width: 100vw;
+      height: 56.25vw;
     }
 
     // WebKit CSS3 transforms for supported devices
@@ -216,6 +218,7 @@
 // Hidden by default for smaller viewports
 .carousel-caption {
   position: absolute;
+  top:150px;
   width: inherit;
   height: inherit;
   z-index: 10;
@@ -256,7 +259,7 @@
   .carousel-caption {
     left: 20%;
     right: 20%;
-    padding-bottom: 30px;
+    //padding-bottom: 30px;
   }
 
   // Move up the indicators
