--- a/web/front/less/carousel.less
+++ b/web/front/less/carousel.less
@@ -218,7 +218,7 @@
 // Hidden by default for smaller viewports
 .carousel-caption {
   position: absolute;
-  top:150px;
+  top:50%;
   width: inherit;
   height: inherit;
   z-index: 10;
