Ajout d'un bouton scroll dans la page accueil

--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -2,7 +2,8 @@
 
 {% block body %}
 <div class="row">
-{# Slideshow #}
+
+{#Debut Slideshow #}
 <div id="myCarousel" class="row carousel slide" data-ride="carousel">
   <!-- Indicators -->
   <ol class="carousel-indicators">
@@ -39,9 +40,15 @@
     {% endif %}
     <p>pratiquez comme si vous y étiez</p>
   </div>
+  <div>
+    <a class="more-scroll" href="#PageAccueil">"Découvrir SpeakIt!"
+    </a>
+  </div>
 </div>
-{# Fin Slideshow #}
-<div class="row welcome-panel">
+
+{#Fin Slideshow#}
+
+<div id="PageAccueil" class="row welcome-panel">
 </div>
 <div class="row">
     <div class="col-md-12 home-row">
