--- a/web/front/less/carousel.less
+++ b/web/front/less/carousel.less
@@ -266,4 +266,25 @@
   .carousel-indicators {
     bottom: 20px;
   }
+
+  //More Scroll
+.more-scroll{
+border: none;
+bottom: 0;
+color: inherit;
+font-size: 0.8em;
+height: 8.5em;
+left: 50%;
+letter-spacing: 0.225em;
+margin-left: -8.5em;
+opacity: 1;
+outline: 0;
+padding-left: 0.225em;
+position: absolute;
+text-align: center;
+text-transform: uppercase;
+width: 16em;
+z-index: 1;
+}
+
 }
