--- a/app/Resources/FOSUserBundle/views/Registration/register_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Registration/register_content.html.twig
@@ -54,7 +54,7 @@
         <div class="col-md-6 col-md-offset-3">
             <div class="row">
                 <div class="col-md-6">
-                    <a class="btn btn-default" href="http://localhost:8000/connect/facebook" id="facebook-login">
+                    <a class="btn btn-default" href="http://localhost:8000/login/facebook" id="facebook-login">
                         <i class="fa fa-facebook-official"></i> Login with Facebook
                     </a>
                 </div>
