amélioration page d'accueil au niveau design

--- a/web/front/less/eduspeak/eduspeak.less
+++ b/web/front/less/eduspeak/eduspeak.less
@@ -14,12 +14,15 @@
     color: white;
     text-align: center;
     padding-top: 5rem;
+    >div{
+        margin-top: 4rem;
+    }
 }
 
 .home-row {
     border-bottom: solid 3px;
     text-align: center;
-    color: @gray-light;
+    color: white;
     >div{
         margin-top: 4rem;
     }
