--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -54,8 +54,11 @@
       </div>
 
       <div id="BodyPageAcceuilLogge" class="row">
+        {#
         {#*** Pour chaque langues de l'utilisateur connecté ***#}
         {% for %}
+        $em = $this->getDoctrine()->getManager();
+        $invited = $em->getRepository('EduSpeakBundle:User')->findOneById($id);
           <div class="col-md-2">
             {#**** Pour chaque Pays de langues précédent****#}
             {% for %}
@@ -65,6 +68,7 @@
             {% endfor %}
           </div>
         {% endfor %}
+        #}
 
       </div>
 
