user-profile-templating show_content

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -37,7 +37,7 @@
                                     <li><a href="#">Mes compagnons</a></li>
                                     <li class="dropdown">
                                         <a href="#" class="dropdown-toggle no-padding-vertical" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                                            <img class="profile-picture" src="{{ asset('image/kevin_lebre.jpg') }}" alt="Profil" />
+                                            <img class="profile-picture" src="{{ asset('image/kevin_lebre_small.jpg') }}" alt="Profil" />
                                             {{ app.user.username }}<span class="caret"></span>
                                         </a>
                                         <ul class="dropdown-menu">
