--- a/web/front/less/eduspeak/eduspeak.less
+++ b/web/front/less/eduspeak/eduspeak.less
@@ -1,21 +1,30 @@
 //MAIN CLASSEs
 
+// BALISES
+img {
+  margin-bottom: @size-px-5;
+}
+
+// NAVBAR ---------------------------------------------------------------------------
+
+.profile-picture {
+    border-radius: @size-px-30;
+    margin-right: @size-px-10;
+}
+
+// AUTRES ----------------------------------------------------------------------------
+
 .eduspeak-logo {
     float:left;
 }
 
 .edu-nav {
-    color: @eduspeak-base;
-}
-
-.profile-picture {
-    border-radius: 30px;
-    margin-right: 10px;
+    color: @eduspeak-base-pink;
 }
 
 .welcome-panel {
     min-height: 25rem;
-    background-color: @eduspeak-base;
+    background-color: @eduspeak-base-pink;
     color: white;
     text-align: center;
     padding-top: 5rem;
