--- a/web/front/less/eduspeak/profile.less
+++ b/web/front/less/eduspeak/profile.less
@@ -1,5 +1,45 @@
-.edu-profile{
-	li{
-		list-style: none;
-	}
+// PROFILE ---------------------------------------------------------------------------
+
+#edu-profile {
+
+}
+
+#edu-profile-row {
+
+}
+
+#edu-profile-section-up, #edu-profile-section-down {
+	padding-top: @size-px-5;
+	padding-bottom: @size-px-5;
+}
+
+#edu-profile-section-up {
+	background: url('../../../image/paris_profile.jpg') no-repeat center;
+	//-webkit-background-size: cover; /* pour anciens Chrome et Safari */
+	//background-size: cover; /* version standardisée */
+	border-bottom: @gray-border;
+}
+
+#edu-profile-section-up div {
+	background: transparent;
+}
+
+#edu-profile .panel {
+	border: none;
+	box-shadow: none;
+}
+
+#edu-profile .panel-heading {
+	background: none;
+	border: none;
+}
+
+#edu-profile .panel-title {
+	color: @panel-title-color;
+	font-weight: bold;
+}
+
+#edu-profile-general h3.panel-title {
+	text-align: center;
+	color: @gray;
 }
