--- a/web/front/less/scaffolding.less
+++ b/web/front/less/scaffolding.less
@@ -22,6 +22,7 @@
 html {
   font-size: 10px;
   -webkit-tap-highlight-color: rgba(0,0,0,0);
+  height: @full-height;
 }
 
 body {
@@ -31,6 +32,7 @@ body {
   color: @text-color;
   background-color: @body-bg;
   width:@full-width;
+  height: @full-height;
 }
 
 // Reset fonts for relevant elements
