--- a/app/Resources/FOSUserBundle/views/Profile/edit_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Profile/edit_content.html.twig
@@ -6,7 +6,7 @@
             <div id="edu-profile-general" class="col-md-2 full-height">
                 <div class="panel panel-primary full-height">
                     <div class="panel-heading">
-                        <input type="text" name="username">Name : {{ user.username }}</input>
+                        <input type="text" name="username" value="kevin_lebre"></input>
                     </div>
                     <div class="panel-body">
                         <img src="{{ asset('image/kevin_lebre_big.jpg') }}" alt="Profil" />
@@ -14,7 +14,7 @@
                             <i class="fa fa-envelope-o fa-2x col-md-6"></i>
                             <i class="fa fa-user-plus fa-2x col-md-6"></i>
                         </div>
-                        <button type="button" class="btn btn-default btn-xs col-md-12 btn-edu">Modifier mon profil</button>
+                        <a href="{{ path('fos_user_profile_show') }}" class="btn btn-default btn-xs col-md-12 btn-edu">Enregistrer mon profil</a>
                     </div>
                 </div>
             </div>
@@ -66,7 +66,7 @@
                         <h3 class="panel-title">Age :</h3>
                     </div>
                     <div class="panel-body col-md-6">
-                        <input type="text" name="age">23</input>
+                        <input type="number" name="age" value="23">
                     </div>
                 </div>
                 <div class="panel panel-primary">
@@ -74,7 +74,7 @@
                         <h3 class="panel-title">Ville :</h3>
                     </div>
                     <div class="panel-body col-md-6">
-                        <input type="text" name="city">Paris</input>
+                        <input type="text" name="city" value="Paris">
                     </div>
                 </div>
                 <div class="panel panel-primary">
@@ -82,7 +82,7 @@
                         <h3 class="panel-title">Pays :</h3>
                     </div>
                     <div class="panel-body col-md-6">
-                        <input type="text" name="country">France</input>
+                        <input type="text" name="country" value="France">
                     </div>
                 </div>
             </div>
@@ -100,7 +100,7 @@
                         <h3 class="panel-title">Centres d’Intérêts :</h3>
                     </div>
                     <div class="panel-body">
-                        <input type="text" name="country">Voyages, photos, sports, nouvelles technologies</input>
+                        <input type="text" name="country" value="Voyages, photos, sports, nouvelles technologies" class="col-md-12">
                     </div>
                 </div>
             </div>
