--- a/app/Resources/FOSUserBundle/views/Profile/show_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Profile/show_content.html.twig
@@ -14,7 +14,7 @@
                             <i class="fa fa-envelope-o fa-2x col-md-6"></i>
                             <i class="fa fa-user-plus fa-2x col-md-6"></i>
                         </div>
-                        <button type="button" class="btn btn-default btn-xs col-md-12 btn-edu">Modifier mon profil</button>
+                        <a href="{{ path('fos_user_profile_edit') }}" class="btn btn-default btn-xs col-md-12 btn-edu">Modifier mon profil</a>
                     </div>
                 </div>
             </div>
@@ -123,6 +123,5 @@
                 </div>
             </div>
         </div>
-        {% endif %}
     </div>
 </div>
