Amélioration template accueil
-opacity
-création en dur du choix de destination

--- a/web/front/less/eduspeak/eduspeak.less
+++ b/web/front/less/eduspeak/eduspeak.less
@@ -58,3 +58,23 @@
         color: #ff5050;
     }
 }
+
+#BodyPageAcceuilLogge{
+    .thumbnail {
+      &:hover{
+      img{
+
+          opacity: 0.7;
+          }
+      }
+    }
+}
+
+.carousel {
+  &:hover{
+  img{
+
+      opacity: 0.7;
+      }
+  }
+}
