--- a/web/front/less/thumbnails.less
+++ b/web/front/less/thumbnails.less
@@ -30,16 +30,13 @@
   a&.active {
     border-color: @link-color;
   }
-
   // Image captions
   .caption {
-    padding: @thumbnail-caption-padding;
-    color: @thumbnail-caption-color;
-
-    //AJOUTER PAR ANTOINE
-    top:0;
-    left:0;
+    color: white;
     position: absolute;
-    //Fin de l'ajout
+    top: 45%;
+    left: 0;
+    width: 100%;
   }
+
 }
