--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -36,7 +36,7 @@
             <img class="img-responsive center-block" src="{{ asset('image/newyork.jpg') }}" alt="NewYork"Ò>
             </div>
             <div>
-              <a class="more-scroll" href="#PageAccueilLogge">"Découvrir de nouveau horizons?!"
+              <a class="more-scroll" href="#BodyPageAcceuilLogge">"Découvrir de nouveau horizons?!"
               </a>
             </div>
         </div>
@@ -55,36 +55,102 @@
 
     {#____________________Affichage des langues avec pays____________________#}
       <div id="BodyPageAcceuilLogge" class="row">
-        {#*** Pour chaque langues de l'utilisateur connecté ***#}
-      {% Languages=app.user.getUserLanguages() %}
-      {% for langage in Languages %}
-      <div class="row col-md-offset-2 col-md-8">
-          <h4>{{Languages}}</h4>
-          {% set count= Languages|length %}
-          {% AllCountry= langage.getCountry() %}
-              {% for country in langage.getcountry() %}
-                {% if count==1 %}
-                  <div class="row col-md-6">
-                    <a href="#" class="thumbnail">
-                      <img src="..." alt="...">
+
+      {#____________________TEST WIHTOUT THE FUNCTIONS____________________#}
+      <div class="row col-md-offset-2 col-md-8 text-center">
+          <h2>Anglais</h2>
+          {% set count = 3 %}
+          {% set isEven = count %}
+          {% for i in 1..count %}
+            {% if isEven is odd %}
+                {% if count == 1 %}
+                  <div class="row col-md-12 center-block">
+                    <a class="thumbnail text-center">
+                      <img class="img-responsive center-block" src="{{ asset('image/paris.jpg') }}" alt="Paris">
+                    <div class="caption">
+                      <h3>Angleterre</h3>
+                    </div>
                     </a>
                   </div>
+
                 {% else%}
-                  <div class="row col-md-4">
-                    <a href="#" class="thumbnail">
-                      <img src="..." alt="...">
+                  <div class="row col-md-6 center-block">
+                    <a class="thumbnail text-center">
+                      <img class="img-responsive center-block" src="{{ asset('image/paris.jpg') }}" alt="Paris">
+
+                    <div class="caption">
+                      <h3>Angleterre</h3>
+                    </div>
+                  </a>
+                  </div>
+                  {% set count = count-1 %}
+                {% endif %}
+              {% else%}
+                <div class="row col-md-6 center-block">
+                  <a class="thumbnail text-center">
+                    <img class="img-responsive center-block" src="{{ asset('image/paris.jpg') }}" alt="Paris">
+                  <div class="caption">
+                    <h3>Angleterre</h3>
+                  </div>
+                  </a>
+                </div>
+                {% set count = count-1 %}
+              {% endif %}
+              {% endfor %}
+          </div>
+        </div>
+
+
+
+      {#____________________WAITING GOOD FUNCTION____________________#}
+      {#
+
+        {% Languages=app.user.getUserLanguages() %}
+        {% for langage in Languages %}
+        <div class="row col-md-offset-2 col-md-8">
+            <h3>{{Languages}}</h3>
+            {% set count= Languages|length %}
+            {% set isEven = count %}
+            {% AllCountry= langage.getCountry() %}
+            {% for i in 1..count %}
+              {% if isEven is odd %}
+                  {% if count == 1 %}
+                    <div class="row col-md-12">
+                      <a class="thumbnail">
+                        <img class="img-responsive center-block" src="{{ asset('image/paris.jpg') }}" alt="Paris">
+                      </a>
+                      <div class="thumbnail-caption">
+                        //country avec index i
+                        <h4>Allcountry</i></h4>
+                      </div>
+                    </div>
+                    </div>
+                  {% else%}
+                    <div class="row col-md-6">
+                      <a class="thumbnail">
+                        <img class="img-responsive center-block" src="{{ asset('image/paris.jpg') }}" alt="Paris">
+                      </a>
+                      <div class="thumbnail-caption">
+                        <h4>Angleterre</h4>
+                      </div>
+                    </div>
+                    {% set count = count-1 %}
+                  {% endif %}
+                {% else%}
+                  <div class="row col-md-6">
+                    <a class="thumbnail">
+                      <img class="img-responsive center-block" src="{{ asset('image/paris.jpg') }}" alt="Paris">
                     </a>
                     <div class="thumbnail-caption">
-                      <h3>{{country}}</h3>
+                      <h4>Angleterre</h4>
                     </div>
                   </div>
                   {% set count = count-1 %}
-                {% end if %}
-            {# {% endfor %}#}
-          </div>
-      {#   {% endfor %}#}
+                {% endif %}
+                {% endfor %}
+            </div>
 
-      </div>
+    #}
 
 
     {#-------------------UTILISTAEUR NON CONNECTE----------------------------#}
