Integration du profil

--- a/app/Resources/FOSUserBundle/views/layout.html.twig
+++ b/app/Resources/FOSUserBundle/views/layout.html.twig
@@ -12,7 +12,7 @@
         {% endfor %}
     {% endfor %}
 
-    <div style="height: 89.5%;">
+    <div>
         {% block fos_user_content %}
         {% endblock fos_user_content %}
     </div>
