--- a/web/front/less/eduspeak/eduspeak.less
+++ b/web/front/less/eduspeak/eduspeak.less
@@ -10,7 +10,8 @@ img {
 .profile-picture {
     border-radius: @size-px-30;
     margin-right: @size-px-10;
-    
+    width: 4em;
+
 }
 
 // AUTRES ----------------------------------------------------------------------------
