--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -12,7 +12,7 @@
         <link rel="stylesheet" href="{{ asset('front/dist/css/bootstrap-theme.css') }}">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     </head>
-    <body>
+    <body style="padding: 0;">
         <div class="container">
             {% if app.security.token is not null and is_granted("IS_AUTHENTICATED_REMEMBERED") %}
                 <div class="row">
@@ -37,7 +37,7 @@
                                     <li><a href="#">Mes compagnons</a></li>
                                     <li class="dropdown">
                                         <a href="#" class="dropdown-toggle no-padding-vertical" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                                            <img class="profile-picture" src="{{ asset('image/kevin_lebre_small.jpg') }}" alt="Profil" />
+                                            <img class="profile-picture" src="{{ app.user.facebookPicture }}" alt="Profil" />
                                             {{ app.user.username }}<span class="caret"></span>
                                         </a>
                                         <ul class="dropdown-menu">
