--- a/web/front/less/eduspeak/profile.less
+++ b/web/front/less/eduspeak/profile.less
@@ -5,7 +5,23 @@
 }
 
 #edu-profile-row {
-
+	margin-top: 3em;
+	.profil-details{
+		background-color: white;
+		opacity: 0.9;
+		box-shadow: grey 2px 2px 2px 2px;
+		margin-bottom: 5em;
+		padding: 1em;
+		ul{
+			list-style: none;
+			padding: 0;
+		}
+	}
+	.visited-list{
+		img{
+			width: 3em;
+		}
+	}
 }
 
 #edu-profile-section-up, #edu-profile-section-down {
@@ -14,7 +30,6 @@
 }
 
 #edu-profile-section-up {
-	background: url('../../../image/paris_profile.jpg') no-repeat center;
 	//-webkit-background-size: cover; /* pour anciens Chrome et Safari */
 	//background-size: cover; /* version standardisée */
 	border-bottom: @gray-border;
@@ -42,4 +57,56 @@
 #edu-profile-general h3.panel-title {
 	text-align: center;
 	color: @gray;
+}
+
+.profil-banner{
+	>div{
+		padding: 0;
+	}
+	img{
+		width: 100%;
+		min-height: 32em;
+	}
+}
+
+#edu-profile-top{
+	position: absolute;
+	top: 6em;
+	left: 4em;
+	width: 90%;
+	.profil-name{
+		text-align: center;
+	}
+	.profil-contact{
+		background-color: white;
+		opacity: 0.8;
+		width: 20rem;
+		margin: 0;
+	}
+	.btn{
+		width: 100%;
+	}
+	.profil-icon{
+		text-align: center;
+	}
+	img{
+		margin-bottom: 0;
+		width: 20rem;
+	}
+	.profil-listing{
+		ul{
+			padding: 0;
+			list-style: none;
+			li{
+				float: left;
+				margin-right: 4rem;
+			}
+		}
+		img{
+			width: 8rem;
+		}
+		.profil-language{
+			margin-top: 4rem;
+		}
+	}
 }
