--- a/web/front/less/variables.less
+++ b/web/front/less/variables.less
@@ -395,10 +395,10 @@
 @navbar-default-border:            darken(@navbar-default-bg, 6.5%);
 
 // Navbar links
-@navbar-default-link-color:                #fff;
-@navbar-default-link-hover-color:          #fff;
+@navbar-default-link-color:                #514d4d;
+@navbar-default-link-hover-color:          #514d4d;
 @navbar-default-link-hover-bg:             transparent;
-@navbar-default-link-active-color:         #fff;
+@navbar-default-link-active-color:         #3d3030;
 @navbar-default-link-active-bg:            #edefed;
 @navbar-default-link-disabled-color:       #ccc;
 @navbar-default-link-disabled-bg:          transparent;
