Code plus propre
j’ai rajoute les bon id et class comme a demandé vincent pour les .Less

--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-<div class="row">
+<div class="row accueil">
 
     {#-------------------UTILISTAEUR CONNECTE--------------------------------#}
 
@@ -36,7 +36,7 @@
             <img class="img-responsive center-block" src="{{ asset('image/newyork.jpg') }}" alt="NewYork"Ò>
             </div>
             <div>
-              <a class="more-scroll" href="#BodyPageAcceuilLogge">"Découvrir de nouveau horizons?!"
+              <a class="more-scroll" href="#choixDestination">"Découvrir de nouveau horizons?!"
               </a>
             </div>
         </div>
@@ -54,7 +54,7 @@
       </div>
 
     {#____________________Affichage des langues avec pays____________________#}
-      <div id="BodyPageAcceuilLogge" class="row">
+      <div id="choixDestination" class="row">
 
       {#____________________TEST WIHTOUT THE FUNCTIONS____________________#}
       <div class="row col-md-offset-2 col-md-8 text-center">
@@ -185,7 +185,7 @@
         <img class="img-responsive center-block" src="{{ asset('image/newyork.jpg') }}" alt="NewYork"Ò>
         </div>
         <div>
-          <a class="more-scroll" href="#PageAccueil">"Découvrir SpeakIt!"
+          <a class="more-scroll" href="#Presentation">"Découvrir SpeakIt!"
           </a>
         </div>
     </div>
@@ -199,7 +199,7 @@
 
   {#_________________________Presentation SpeakIt!___________________________#}
 
-  <div id="PageAccueil" class="row welcome-panel">
+  <div id="Presentation" class="row welcome-panel">
     <div class="col-md-12 home-row">
         <h2>Une nouvelle façon d'apprendre</h2>
     </div>
