--- a/web/front/less/eduspeak/eduspeak.less
+++ b/web/front/less/eduspeak/eduspeak.less
@@ -59,7 +59,8 @@
     }
 }
 
-#BodyPageAcceuilLogge{
+.accueil{
+  #choixDestination{
     .thumbnail {
       &:hover{
       img{
@@ -68,13 +69,13 @@
           }
       }
     }
-}
-
-.carousel {
-  &:hover{
-  img{
-
-      opacity: 0.7;
-      }
   }
+
+    .carousel {
+      &:hover{
+      img{
+          opacity: 0.7;
+          }
+      }
+    }
 }
