--- a/web/front/less/bootstrap.less
+++ b/web/front/less/bootstrap.less
@@ -60,3 +60,4 @@
 @import "eduspeak/button.less";
 @import "eduspeak/discussion.less";
 @import "eduspeak/profile.less";
+@import "eduspeak/alert.less";
