--- a/web/front/less/variables.less
+++ b/web/front/less/variables.less
@@ -6,6 +6,7 @@
 @full-height:           100%;
 @mid-width:             50%;
 @mid-height:            50%;
+@page-row-height:       90.7%;
 
 //== Sizes
 //
