Added @eduspeak-base é

--- a/web/front/less/variables.less
+++ b/web/front/less/variables.less
@@ -42,7 +42,7 @@
 @gray-border:           #dce0e0 solid 1px;
 
 //## Site colors
-
+@eduspeak-base: white;
 @eduspeak-base-pink:    #FF5050;
 @eduspeak-base-purple:  #76114B;
 
